# samaya

./: .gitignore  CONTRIBUTING.md  README.md  flake.nix  index.html  io.github.redddfoxxyy.samaya.json  io.github.redddfoxxyy.samaya.json~  meson.build  samaya.spec  shell.nix
.github/: FUNDING.yml
.github/workflows/: build_flatpak.yml
.zed/: tasks.json
build-aux/flatpak/: README.md  io.github.redddfoxxyy.samaya.json
data/: io.github.redddfoxxyy.samaya.desktop.in  io.github.redddfoxxyy.samaya.gschema.xml  io.github.redddfoxxyy.samaya.metainfo.xml.in  io.github.redddfoxxyy.samaya.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  ar.po  cs.po  de.po  es.po  et.po  fi.po  hi.po  ko.po  meson.build  mr.po  nl.po  ro.po  ru.po  samaya.pot  tr.po  vi.po
src/: main.c  meson.build  preferences-dialog.ui  samaya-application.c  samaya-application.h  samaya-preferences-dialog.c  samaya-session.c  samaya-session.h  samaya-style.css  samaya-timer.c  samaya-timer.h  samaya-window.c  samaya-window.h  samaya-window.ui  samaya.cmb  samaya.gresource.xml  shortcuts-dialog.ui  timer.c  timer.h
